# bugreport-extractor-library

./: Cargo.toml  README.md  bugreport.md
.github/workflows/: ci.yml
config/: detector_default.json  detector_entreprise.json
data/: whisperpair_devices.json
docs/: SIGMA_FIELDS.md
rules/2024-12-16_serbia_novispy/: novispy.yml
src/: file_loader.rs  lib.rs  progress.rs  sigma_integration.rs  sigma_output.rs  timeline.rs  timing.rs  uid_package.rs  zip_utils.rs
src/comparison/: correlator.rs  mod.rs  output.rs  package_differ.rs  power_differ.rs  process_differ.rs  usb_differ.rs
src/detection/: crash.rs  detector.rs  detector_tests.rs  mod.rs  whisperpair.rs
src/detection/sigma/: integration.rs  mod.rs  output.rs
src/parsers/: adb_parser.rs  authentication_parser.rs  battery_parser.rs  bluetooth_parser.rs  crash_parser.rs  device_policy_parser.rs  header_parser.rs  logcat_parser.rs  memory_parser.rs  mod.rs  network_parser.rs  package_parser.rs  power_parser.rs  privacy_parser.rs  process_parser.rs  usb_parser.rs  vpn_parser.rs
testdata/rules/: battery_app_high_background_usage.yml  bluetooth_whisperpair_vulnerable.yml  browser_to_non_store_install.yml  crash_anr_system_process.yml  crash_native_abort_message.yml  match_package.yml  network_interface_unexpected.yml  network_outbound_suspicious_port.yml  network_wifi_scan_third_party.yml  package_sideload_no_installer.yml  power_unexpected_reset.yml  process_root_or_system_running.yml  suspicious_initiator.yml  tombstone_backtrace_imagecodec.yml  usb_device_connected.yml
testdata/rules/CVE/: CVE-2024-0050.yaml  CVE-2024-34736.yaml  CVE-2025-26455.yaml  CVE-2025-27363.yaml  CVE-2025-36911.yaml  CVE-2025-48543.yaml  CVE-2025-58478.yaml
testdata/rules/examples/: README.md  example_01_package_install.yml  example_02_package_metadata.yml  example_03_process.yml  example_04_power.yml  example_05_battery.yml  example_06_usb.yml  example_07_bluetooth.yml  example_08_crash_tombstone.yml  example_09_crash_backtrace.yml  example_10_crash_anr.yml  example_11_network_socket.yml  example_12_network_interface.yml  example_13_network_stats.yml  (+1 more)
