[package]
name = "bugreport_extractor_library"
version = "0.1.0"
edition = "2021"


[lib]
name = "bugreport_extractor_library"
path = "src/lib.rs"

[[bin]]
name = "bel-cli"
path = "bin/cli.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8"
memmap2 = "0.9"
regex = "1"
sigma-zero = { git = "https://github.com/ping2A/sigmazero.git" }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"